# GeoGuesser

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: python-build.yaml
data/old_scraped_images/: metadata.json
data/scraped_images/: metadata.json
geoguesser/: config.py  main.py
geoguesser/models/: cnn_geoguesser.py
geoguesser/postprocessor/: grid_postprocessor.py
geoguesser/preprocessor/: grid_preprocessor.py  image_preprocessor.py
geoguesser/scrapers/: maps_scraper.py  maps_updater.py
geoguesser/utils/: geocoding.py
scraped_images/: metadata.json
src/: gui.py  main.py
src/models/: cnn_geoguesser.py
src/postprocessor/: grid_postprocessor.py
src/preprocessor/: data_splitter.py  grid_preprocessor.py  image_preprocessor.py  preprocessor.py
src/scrapers/: flickr_scraper.py  maps_scraper.py  maps_updater.py
src/utils/: geocoding.py
